Fix header wrapping in IE. Closes #173.

--- a/less/app.less
+++ b/less/app.less
@@ -44,6 +44,7 @@ h1,h2,h3,h4,h5,h6 {
 		color: #fff;
 		line-height: 60px;
 		margin: 0;
+        white-space: nowrap;
 		.transition(opacity 0.5s ease-in-out);
 
 		.hidden-xs;
